Overview of changes from Beebop 1.0.0 to 1.0.1
==============================================

  * Correctly update controls as rows are added or removed.


Overview of changes in Beebop 1.0.0
===================================

  * First release.