@@ -3,6 +3,8 @@ Overview of changes from Beebop 1.0.0 to 1.0.1
 
   * Correctly update controls as rows are added or removed.
 
+  * Fill the closing row with asterisks.
+
 
 Overview of changes in Beebop 1.0.0
 ===================================
